Change of files

--- a/Class 10 /Class10.qmd
+++ b/Class 10 /Class10.qmd
@@ -1,12 +1,226 @@
 ---
 title: "Class 10"
-format: gfm
+author: "Diana Lopez"
+format: pdf
 editor: visual
 ---
 
-```{r}
-candy_file <- "candy-data.csv"
+# Importing candy data
 
-candy = (, row.names=1)
+```{r}
+candy_url <- url("https://raw.githubusercontent.com/fivethirtyeight/data/master/candy-power-ranking/candy-data.csv")
+candy <- read.csv(candy_url, header = TRUE, row.names=1)
+
 head(candy)
+```
+
+Q1. How many different candies are in this dataset?
+
+85
+
+Q2. How many fruity candy types are in this data set?
+
+```{r}
+sum(candy[,2])
+```
+
+# What is your favorite candy?
+
+```{r}
+candy["Root Beer Barrels", ]$winpercent
+
+candy["Kit Kat", ]$winpercent
+
+candy["Tootsie Roll Snack Bars", ]$winpercent
+```
+
+```{r}
+library("skimr")
+skim(candy)
+```
+
+-   **Q6**. Is there any variable/column that looks to be on a different scale to the majority of the other columns in the dataset?
+
+The winpercent is a different scale because the mean is 50 vs \~0-1
+
+-   **Q7**. What do you think a zero and one represent for the `candy$chocolate` column?
+
+The zero vs one represents the identity of a candy being or containing chocolate.
+
+-   **Q8**. Plot a histogram of `winpercent` values
+
+```{r}
+hist(candy[,"winpercent"])
+```
+
+-   **Q9**. Is the distribution of `winpercent` values symmetrical?
+
+    No
+
+```{=html}
+<!-- -->
+```
+-   **Q10**. Is the center of the distribution above or below 50%?
+
+    Below 50%
+
+```{=html}
+<!-- -->
+```
+-   **Q11**. On average is chocolate candy higher or lower ranked than fruit candy?
+
+```{r}
+chocolate.inds <- as.logical(candy$chocolate)
+chocolate.win <- candy[chocolate.inds,]$winpercent
+mean(chocolate.win)
+fruity.inds <- as.logical(candy$fruit)
+fruity.win <- candy[fruity.inds,]$winpercent
+mean(fruity.win)
+```
+
+-   **Q12**. Is this difference statistically significant?
+
+```{r}
+t.test(chocolate.win,fruity.win)
+```
+
+-   **Q13**. What are the five least liked candy types in this set?
+
+```{r}
+ordered_by_winpercent <- candy[order(candy[,"winpercent"]),]
+head(ordered_by_winpercent, n=5)
+library("dplyr")
+candy %>% arrange(winpercent) %>% head(5)
+```
+
+-   **Q14**. What are the top 5 all time favorite candy types out of this set?
+
+```{r}
+ordered_by_winpercent <- candy[order(candy[,"winpercent"],decreasing = TRUE),]
+head(ordered_by_winpercent, n=5)
+library("dplyr")
+candy %>% arrange(winpercent) %>% head(5)
+```
+
+-   **Q15**. Make a first barplot of candy ranking based on `winpercent` values. **Q16**. This is quite ugly, use the `reorder()` function to get the bars sorted by `winpercent`?
+
+```{r}
+library("ggplot2")
+ggplot(ordered_by_winpercent)+
+  aes(winpercent,rownames(candy))+
+  geom_col()
+```
+
+```{r}
+library("ggplot2")
+ggplot(candy)+
+  aes(winpercent,reorder(rownames(candy),winpercent))+
+  geom_col()
+```
+
+-   **Q17**. What is the worst ranked chocolate candy?
+
+```{r}
+my_cols=rep("black",nrow(candy))
+my_cols[as.logical(candy$chocolate)] <- "chocolate"
+my_cols[as.logical(candy$bar)] <- "brown"
+my_cols[as.logical(candy$fruity)] <- "pink"
+```
+
+```{r}
+ggplot(candy)+aes(winpercent, reorder(rownames(candy),winpercent))+
+  geom_col(fill=my_cols)+theme(text=element_text(size=6))
+
+ggsave("mybarplot_withcol.png")
+```
+
+-   Q18. What is the best ranked fruity candy
+
+    Star bursts
+
+```{r}
+library(ggrepel)
+
+ggplot(candy)+
+  aes(winpercent, pricepercent, label=rownames(candy))+
+  geom_point(col=my_cols)+
+  geom_text_repel(col=my_cols, size=3.3, max.overlaps=5)
+```
+
+-   **Q19**. Which candy type is the highest ranked in terms of `winpercent` for the least money - i.e. offers the most bang for your buck?
+
+    Reese's miniatures
+
+```{=html}
+<!-- -->
+```
+-   **Q20**. What are the top 5 most expensive candy types in the dataset and of these which is the least popular?
+
+```{r}
+ordered_by_pricepercent <- candy[order(candy[,"pricepercent"],decreasing = TRUE),]
+head(ordered_by_pricepercent, n=5)
+```
+
+# Exploring the correlation structure
+
+```{r}
+library(corrplot)
+cij <- cor(candy)
+corrplot(cij)
+```
+
+-   **Q22**. Examining this plot what two variables are anti-correlated (i.e. have minus values)?
+
+    Fruity with chocolate and pluribus with bar
+
+```{=html}
+<!-- -->
+```
+-   **Q23**. Similarly, what two variables are most positively correlated?
+
+    Chocolate with winpercent, and chocolate with Bar
+
+# Principal Component Analysis
+
+```{r}
+candy_pca <- prcomp(candy,scale=TRUE)
+summary(candy_pca)
+```
+
+```{r}
+plot(candy_pca$x[,1],candy_pca$x[,2],col=my_cols,pch=16)
+```
+
+```{r}
+my_data <- cbind(candy,candy_pca$x[,1:3])
+```
+
+```{r}
+plot_1 <- ggplot(my_data)+
+              aes(x=PC1, y=PC2,
+                  size=winpercent/100,
+                  text=rownames(my_data),
+                  label=rownames(my_data))+
+              geom_point(col=my_cols)+
+              geom_text_repel(size=3.3,col=my_cols,max.overlaps = 7)+
+  labs(title="Halloween Candy PCA Space",
+       subtitle="Colored by type: chocoolate bar (dark brown), chocolate other (light brown), fruity (pink)",
+       caption="data from 538 points")
+plot_1
+```
+
+-   **Q24**. What original variables are picked up strongly by PC1 in the positive direction? Do these make sense to you?
+
+```{r}
+barplot(candy_pca$rotation[,1], las=2,ylab="PCA1 contribution")
+```
+
+```{r}
+barplot(candy_pca$rotation[,2], las=2,ylab="PCA1 contribution")
+```
+
+```{r}
+
+x <- summary(candy_pca)
+plot(x$importance[2,],type="b")
 ```
